--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <h1><%= t :admin %></h1>
 <ul>
   <li><%= link_to t("manager_categories"), admin_categories_path %></li>
-  <li><%= link_to t("manager_words"), "#" %></li>
+  <li><%= link_to t("manager_words"), admin_words_path %></li>
 </ul>
